[package]
name = "rever_ccc_e"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
itertools = "0.14.0"
inquire = "0.7.5"
indicatif = "0.17.11"
serde_json = "1.0.140"
platform-dirs = "0.3.0"
